  * Removed the Diff depends (Closes: #544113, #544041).
    Thanks to Santiago Vila <sanvila@unex.es> and 
    Karl Ferdinand Ebert <kfebert@gmail.com> for the patch.
  * Changes to make the package lintian clean. 
     + Updated dh_clean call to dh_prep in debian/rules.
     + Added ${misc:Depends} to Depends debian/control field of
       tiger and tiger-otheros binary packages.
  * Removed unneeded commands to create symlinks in debian/rules.
  * Removed the clear idx file code in util/genmsgidx to allow build the
    Debian package.

 -- Francisco Manuel Garcia Claramonte <francisco@debian.org>  Thu, 03 Dec 2009 21:52:06 +0100

tiger (1:3.2.2-11) unstable; urgency=low

  * Sort the system/Linux/2/inetd file since 'join' complains about it not being
    sorted when used in check_inetd (Closes: #524783)
  * Add symbolic links so users can create the issue and issue.net templates they  
    want to check against when running check_issue in /etc/tiger/ (Closes: #511970)
  * scripts/find_files: Use patch provided by Khalid Shukri in order to complain
    from danging symlinks properly so that they can be tiger.ignore'd (Closes: 434333)
  * debian/debian.ignore: 
     - Add an ignore message to remove the dangling symlinks that are udev-related
     - Add an ignore message for /dev/log since world-writable permissions for
       that file are standard in Debian (Closes: 417939)
  * initdefs: Change error message when a file value definition is empty
  * systems/Linux/2/check_umask: More extensive umask checks also covering different
    analysis for each one of the available shells in order to provide more meaningful
    information.
  * systems/Linux/2/check_rcumask: Remove shell login umask definitions from the file
    (both bash and csh/tcsh) since these do not apply to the script (i.e. are not
    init.d related) and add /etc/init.d/rc handling (Closes: 443807)
  * doc/misc.txt: Add new messages for new umask analysis covered in check_umask